<resources>
    <string name="app_name">Ski Tracker</string>

    <!-- Nav buttons !-->
    <string name="text_ski">Ski Tracker</string>
    <string name="text_map">Mapa</string>
    <string name="text_history">Historia</string>
    <string name="text_premium">Premium</string>
    <string name="text_tables">Tabela wyników</string>
    <string name="text_settings">Ustawienia</string>
    <string name="text_others">Inne apliakcje</string>]
    <string name="text_share">Udostępnij</string>
    <string name="text_info">O nas</string>
    <string name="text_play">Play</string>
    <string name="text_camera">Aparat</string>

    <string name="text_data">22.22.2222</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Samples !-->
    <string name="hello_blank_fragment_history">Hello blank history fragment</string>
    <string name="hello_blank_fragment_map">Hello blank map fragment</string>
    <string name="test_location">53\°7\'52\"N</string>

    <!-- Keys !-->
    <string name="google_android_map_api_key">AIzaSyCp_8hoUD0lwcsmdELrZO8DNVGitUoKMkI</string>

    <!-- Main Fragment Texts !-->
    <string name="max_speed_text">MAX PRĘDKOŚĆ</string>
    <string name="max_speed">0,0 km/h</string>
    <string name="av_speed">Sr. pręd.</string>
    <string name="curr_speed">Prędkość</string>
    <string name="text_0">0,0 km/h</string>

    <string name="text_dyst">DYSTANS ZJAZDÓW</string>
    <string name="text_Zjazdy">Zjazdy</string>
    <string name="text_wyjazdy">Wyjazdy</string>
    <string name="text_odpoczynek">Odpoczynek</string>
    <string name="text_łącznie">Łącznie</string>
    <string name="text_0_dyst">0,0 km</string>

    <string name="text_czas">CZAS</string>
    <string name="time_0">00:00:00</string>

    <string name="text_wysokosc">WYSOKOŚĆ</string>
    <string name="text_0_wysokosc">0</string>
    <string name="text_max">Max</string>
    <string name="text_min">Min</string>

    <string name="text_fast_ride">FAST RIDE</string>

    <!-- units !-->
    <string name="unit_distance"> km</string>
    <string name="unit_speed"> km/h</string>
    <string name="unit_elevation"> m n.p.m</string>

</resources>
