<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_premium" android:title="@string/text_premium" android:icon="@drawable/ic_premium"/>

    <group android:id="@+id/group_navigation">
        <item android:id="@+id/action_ski" android:title="@string/text_ski" android:icon="@drawable/ic_ski"/>
        <item android:id="@+id/action_map" android:title="@string/text_map" android:icon="@drawable/ic_map_black_24dp"/>
        <item android:id="@+id/action_history" android:title="@string/text_history" android:icon="@drawable/ic_access_time_black_24dp"/>
    </group>

    <group android:id="@+id/group_tables">
        <item android:id="@+id/nav_tables" android:title="@string/text_tables" android:icon="@drawable/ic_trophy_cup_silhouette"/>
    </group>

    <group android:id="@+id/group_settings">
        <item android:id="@+id/nav_settings" android:title="@string/text_settings" android:icon="@drawable/ic_settings_work_tool"/>
    </group>

    <group android:id="@+id/group_others">
        <item android:id="@+id/nav_others" android:title="@string/text_others" android:icon="@drawable/ic_apps_black_24dp"/>
        <item android:id="@+id/nav_share" android:title="@string/text_share" android:icon="@drawable/ic_share_symbol"/>
        <item android:id="@+id/nav_aboutUs" android:title="@string/text_info" android:icon="@drawable/ic_information_button"/>
    </group>
</menu>